k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xablog
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xablog
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xablog
    spec:
      containers:
        - name: xablog
          image: registry.digitalocean.com/xenoamess/xablog:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 2000m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20    # 容器启动后多久开始探测
            timeoutSeconds: 2          # 表示容器必须在2s内做出相应反馈给probe，否则视为探测失败
            periodSeconds: 30          # 探测周期，每30s探测一次
            successThreshold: 1        # 连续探测1次成功表示成功
            failureThreshold: 10        # 连续探测3次失败表示失败
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20    # 容器启动后多久开始探测
            timeoutSeconds: 2          # 表示容器必须在2s内做出相应反馈给probe，否则视为探测失败
            periodSeconds: 30          # 探测周期，每30s探测一次
            successThreshold: 1        # 连续探测1次成功表示成功
            failureThreshold: 10        # 连续探测3次失败表示失败
