k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xablog
  namespace: backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: xablog
