k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-xablog
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - www.xenoamess.com
        - xenoamess.com
        - blog.xenoamess.com
        - funeral.xenoamess.com
      secretName: letsencrypt-xenoamess
  rules:
    - host: www.xenoamess.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xablog
                port:
                  number: 80
    - host: xenoamess.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xablog
                port:
                  number: 80
    - host: blog.xenoamess.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xablog
                port:
                  number: 80
    - host: funeral.xenoamess.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funeral
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xablog
                port:
                  number: 80
  ingressClassName: traefik
